fixed container field styling issues, (edit, style, delele) options styling, scrollbar for textarea in style editor

--- a/src/styles/builder.css
+++ b/src/styles/builder.css
@@ -161,6 +161,24 @@
     color: #FFFFFF;
 }
 
+.builder__droppoint .form-item.container {
+    margin: 1.2em 0;
+    min-height: 70px;
+    border: 2px dashed var(--neutral-color-300);
+    border-radius: 3px;
+    position: relative;
+}
+
+.builder__droppoint .form-item.container::before {
+    content: 'Container';
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translateY(-18px);
+    font-size: .8em;
+    color: var(--neutral-color-600);
+}
+
 .builder__droppoint .form-item {
     position: relative;
 }
@@ -173,9 +191,8 @@
     padding: .1em;
     position: absolute;
     z-index: 10;
-    top: 0;
-    right: 0;
-    transform: translate(-5%, -25%);
+    top: -2px;
+    right: 10px;
     background-color: var(--neutral-color-100);
     border-radius: 25px;
     display: flex;
@@ -183,9 +200,9 @@
     display: none;
 }
 
-.builder__droppoint .form-item > .form-field-modify-options.container {
+.builder__droppoint .form-item.container > .form-field-modify-options {
     z-index: 150;
-    transform: translate(-5%, -60%);
+    top: -20px;
 }
 
 .builder__droppoint .form-field-modify-options button {
@@ -219,7 +236,7 @@
     margin-bottom: 1em;
 }
 
-.builder__style-editor  textarea {
+.builder__style-editor textarea {
     resize: none;
     width: 100%;
     height: 400px;
@@ -227,6 +244,8 @@
     color: var(--neutral-color-500);
     border: 1px solid var(--neutral-color-400);
     border-radius: 3px;
+    scrollbar-width: thin;
+    scrollbar-color: var(--neutral-color-300) var(--neutral-color-100);
 }
 
 .builder__style-editor-btn-wrapper {
@@ -275,21 +294,25 @@
     /* firefox code overriding webkit */
 }
 
-.builder__popup::-webkit-scrollbar {
+.builder__popup::-webkit-scrollbar,
+.builder__style-editor textarea::-webkit-scrollbar {
     width: 8px;
     height: 8px;
 }
 
-.builder__popup::-webkit-scrollbar-track {
+.builder__popup::-webkit-scrollbar-track,
+.builder__style-editor textarea::-webkit-scrollbar-track {
     background-color: var(--neutral-color-100);
 }
 
-.builder__popup::-webkit-scrollbar-thumb {
+.builder__popup::-webkit-scrollbar-thumb,
+.builder__style-editor textarea::-webkit-scrollbar-thumb {
     background-color: var(--neutral-color-300);
     border-radius: 10px;
 }
 
-.builder__popup::-webkit-scrollbar-thumb:hover {
+.builder__popup::-webkit-scrollbar-thumb:hover,
+.builder__style-editor textarea::-webkit-scrollbar-thumb:hover {
     background-color: var(--neutral-color-400);
 }
 
